...
          icon: Icon(Icons.arrow_back_ios),
        ),
        title: Text("Booking Confirm"),
      ),
      body: Padding(
...
                          child: TextFormField(
                            controller: firstNameController,
                            key: Key("FirstName"),
                            decoration: InputDecoration(
                              label: Text("First Name"),
...
                          child: TextFormField(
                            controller: lastNameController,
                            key: Key("LastName"),
                            validator: (value) {
                              if (value == null) {
...
                        Expanded(
                          child: TextFormField(
                            key: Key("CheckInDate"),
                            controller: checkInDateController,
                            validator: (value) {
...
                        Expanded(
                          child: TextFormField(
                            key: Key("CheckOutDate"),
                            controller: checkOutDateController,
                            validator: (value) {
...
                        Expanded(
                          child: TextFormField(
                            key: Key("Adults"),
                            controller: adultController,
                            decoration: InputDecoration(
...
                        Expanded(
                          child: TextFormField(
                            key: Key("Children"),
                            controller: childController,
                            inputFormatters: [
...
                            children: [
                              Text("Room"),
                              Text("$rooms", key: Key("RoomsCountValue")),
                            ],
                          ),
...
                                children: [
                                  Radio<bool>(
                                    key: Key("ForBusiness"),
                                    value: true,
                                  ),
...
                                        Text("Credit card"),
                                        Radio(
                                          key: Key("E-pay"),
                                          value: "E-pay",
                                        ),
...
                      width: double.maxFinite,
                      child: ElevatedButton(
                        key: Key("BookNow"),
                        onPressed: () {
                          if (formkey.currentState?.validate() ?? false) {
...
                                    mainAxisAlignment: MainAxisAlignment.center,
                                    children: [
                                      Text("Are you going to book this room?"),
                                      Row(
                                        mainAxisAlignment:
...
                                              Get.back();
                                              provider.addBooking(
                                                Booking(
                                                  firstName: firstNameController
                                                      .value
...
                                              Get.to(() => MyBookingsPage());
                                            },
                                            child: Text("Yes"),
                                          ),
                                        ],
...
                              Dialog(
                                child: Text(
                                  "error please fill in the form correctly",
                                ),
                              ),
...
                          }
                        },
                        child: Text("Book now"),
                      ),
                    ),
...
