...
  String searchTerm = "";

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text("The Alps'Hotel🇫🇷"),
        actions: [
          IconButton(
            onPressed: () => Get.to(() => MyBookingsPage()),
            icon: Icon(Icons.person_outline),
          ),
        ],
...
            SizedBox(
              height: 60,
              child: Row(
                children: [
                  Expanded(
                    child: TextField(
                      key: Key("HotelSearch"),
                      controller: hotelController,
                      textInputAction: TextInputAction.search,
                      onChanged: (value) {
                        searchTerm = value;
                        applyFilters();
                      },
...
                      decoration: InputDecoration(
                        hint: Text("Search a hotel name"),
                      ),
                    ),
                  ),
                  IconButton(
                    key: Key("FilterList"),
                    onPressed: () {
                      setState(() {
                        isOpenFilter = !isOpenFilter;
                      });
                      applyFilters();
                    },
...
              SizedBox(
                height: 200,
                child: Column(
                  children: [
                    Row(
                      children: [
                        Text("Rating"),
                        for (int i = 0; i < 5; i++)
                          IconButton(
                            key: Key("FilterStar$i"),
                            onPressed: addStarValue,
                            icon: getStar(i),
                          ),
                      ],
                    ),
                    Row(
                      children: [
                        Text("Dist"),
                        Expanded(
                          child: SizedBox(
                            width: 200,
                            child: Slider(
                              key: Key("DistanceSlider"),
                              semanticFormatterCallback: (value) {
                                return value.toStringAsFixed(1);
                              },
                              max: 10,
                              showValueIndicator:
                                  ShowValueIndicator.alwaysVisible,
...
