...
                    style: TextStyle(fontSize: 18, fontWeight: FontWeight.w600),
                    textAlign: TextAlign.center,
                  ),
                ),
                TabBar(
                  tabs: [
                    Tab(key: Key("GuestReviews"), text: "Guest reviews"),
                    Tab(key: Key("RoomSelection"), text: "Room selection"),
                  ],
                ),
                Expanded(
                  child: TabBarView(
                    children: [
                      Padding(
...
                            ),
                            Expanded(
                              child: Column(
                                crossAxisAlignment: CrossAxisAlignment.start,
                                children: [
                                  Text(
                                    "Reviews",
                                    style: TextStyle(
                                      fontWeight: FontWeight.bold,
                                      fontSize: 16,
                                    ),
                                  ),
                                  Expanded(
...
